[gd_scene load_steps=3 format=3 uid="uid://bb4vfxs05lyb"]

[ext_resource type="Script" path="res://features/demo/scripts/teste.gd" id="1_05vxr"]
[ext_resource type="PackedScene" uid="uid://bmwakh4qavj55" path="res://features/gui/scenes/start.tscn" id="2_e5lcv"]

[node name="Teste" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05vxr")
back_scene = ExtResource("2_e5lcv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="IncrementButton" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Adicionar"

[node name="DecrementButton" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Remover"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1
vertical = true

[node name="BackButton" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/BoxContainer2"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/BoxContainer/IncrementButton" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/BoxContainer/DecrementButton" to="." method="_on_decrement_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/BoxContainer2/BackButton" to="." method="_on_button_pressed"]
